# gmg

./: Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  rci.yml
share/: cgit-gmg.cgi  gmg-import-gitlab  gmg-setup
share/bash_completion.d/: gmg
share/hooks/: update
src/: main.rs  repo.rs  user.rs
